Add search box to feed page
Searches over interests and skills

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -89,6 +89,7 @@ footer {
   border: 2px black solid;
   background-size: cover;
   background-position: center;
+  margin: 0 auto;
 }
 
 .user-list .profile-pic.both {
@@ -114,6 +115,13 @@ footer {
 
 .user-list .profile-info .profile-name {
   text-align: center;
+}
+
+.user-search-box {
+  display: inherit;
+  margin: 0 auto;
+  width: 50%;
+  padding: 5px;
 }
 
 // Account page
