--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -1,6 +1,8 @@
 extends ../layout
 
 block content
+  .row
+    input#user-search.user-search-box(placeholder="Search a skill here, e.g. cooking")
   input#csrf_token(type='hidden', name='_csrf', value=_csrf)
   .row.user-list
     each user, i in users
