Add search box to feed page
Searches over interests and skills

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -97,6 +97,7 @@ textarea {
   border: 2px black solid;
   background-size: cover;
   background-position: center;
+  margin: 0 auto;
 }
 
 .user-list .profile-pic.both {
@@ -122,6 +123,13 @@ textarea {
 
 .user-list .profile-info .profile-name {
   text-align: center;
+}
+
+.user-search-box {
+  display: inherit;
+  margin: 0 auto;
+  width: 50%;
+  padding: 5px;
 }
 
 // Account page
