--- a/views/home.jade
+++ b/views/home.jade
@@ -1,18 +1,20 @@
 extends layout
 
 block content
-  h1.welcome Welcome to the Bazaar!
-  .splash-image
-  .row
-    .col-md-4
-      .home-page-detail
-        h3 Skills Exchange
-        p We all have skills that others can profit from. And we all can profit from the skills of other people. So why not exchange them?
-    .col-md-4
-      .home-page-detail
-        h3 Finder
-        p Find people in your vicinity and help each other. Check out how it works.
-    .col-md-4
-      .home-page-detail
-        h3 Interaction
-        p This platform connects locals with refugees. Be friends!
+  .welcome
+    h1 Welcome to the Bazaar!
+    .subtitle Bringing together refugees and locals over shared skills and interests
+    .row
+      .col-md-4
+        .home-page-detail
+          h3 Skills Exchange
+          p We all have skills that others can profit from. And we all can profit from the skills of other people. So why not exchange them?
+      .col-md-4
+        .home-page-detail
+          h3 Finder
+          p Find people in your vicinity and help each other. Check out how it works.
+      .col-md-4
+        .home-page-detail
+          h3 Interaction
+          p This platform connects locals with refugees. Be friends!
+  link(rel='stylesheet', href='/css/home.css')
