Replace beta sign up form with just link to signup page

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -94,14 +94,8 @@ html
                   a.button.alt(href='#') Learn More
       // CTA
       section#cta
-        h2 Sign up for beta access
+        a.button(style="margin-bottom: 20px;" href="/signup") Sign up now
         p At the moment our service is in beta. Please give us as much feedback as possible. We are always looking to improve.
-        form
-          .row.uniform(class='50%')
-            .8u(class='12u(mobilep)')
-              input#email(type='email', name='email', placeholder='Email Address')
-            .4u(class='12u(mobilep)')
-              input.fit(type='submit', value='Sign Up')
       // Footer
       footer#footer
         ul.icons
