Upload profile picture
Allow users to upload a custom profile
picture. Images are stored in Amazon S3

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -125,6 +125,34 @@ input.activity-checkbox {
   margin-bottom: 20px;
 }
 
+.account-profile-pic {
+  position: relative;
+  display: inline-block;
+}
+
+.account-profile-pic:hover {
+  cursor: pointer;
+}
+
+.account-profile-pic:hover .upload-message {
+  display: block;
+}
+
+.upload-message {
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  left: 10%;
+  padding: 2px;
+  text-align: center;
+  width: 80%;
+  background-color: #203049;
+  color: white;
+  font-weight: 600;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
 // Profile page
 
 .review .rating {
