--- a/views/account/profile.jade
+++ b/views/account/profile.jade
@@ -5,7 +5,7 @@ block content
   .page-header
     h3 Profile Information
 
-  form.form-horizontal(action='/account/profile', method='POST')
+  form.form-horizontal(action='/account/profile', method='POST' enctype="multipart/form-data")
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group
       label.col-sm-2.control-label(for='email') Email
@@ -24,6 +24,13 @@ block content
         label.radio.col-sm-4
           input(type='radio', checked=user.profile.gender=='female', name='gender', value='female', data-toggle='radio')
           span Female
+    .form-group
+      label.col-sm-2.control-label(for='profilepic') Profile picture
+      .col-sm-4
+        input(type='file', accept='image/*', name='profilepic', id='profile-pic-input' style='display: none;')
+        .account-profile-pic(onclick="$('#profile-pic-input').click();")
+          img(id='profile-img' width=200 src='#{user.profile.picture}')
+          .upload-message Update photo
     .form-group
       label.col-sm-2.control-label(for='gender') Status (refugees will be matched with natives and vice versa)
       .col-sm-4
