--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1,7 +1,7 @@
 @import "vendor/bootstrap/bootstrap";
 @import "vendor/font-awesome/font-awesome";
 @import "vendor/bootstrap-social";
-@import "themes/default";
+@import "themes/flatly";
 @import "vendor/jquery-ui";
 
 // Scaffolding
@@ -109,6 +109,7 @@ footer {
   margin: 0 auto;
   width: 50%;
   padding: 5px;
+  margin-top: 10px;
 }
 
 // Account page
