--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -1411,7 +1411,7 @@
 		}
 
 	body, input, select, textarea {
-		color: #fff;
+		color: black;
 		font-family: "Open Sans", Helvetica, sans-serif;
 		font-size: 15pt;
 		font-weight: 400;
@@ -1472,7 +1472,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #fff;
+		color: black;
 		font-weight: 800;
 		letter-spacing: 0.225em;
 		line-height: 1em;
@@ -1600,7 +1600,6 @@
 	}
 
 	header p {
-		color: rgba(255, 255, 255, 0.5);
 		position: relative;
 		top: -0.25em;
 	}
@@ -1633,7 +1632,6 @@
 			}
 
 		header.major p {
-			color: #fff;
 			top: 0;
 		}
 
@@ -2640,18 +2638,14 @@
 			padding: 0;
 		}
 
-		.wrapper.style1 {
-			background-color: #21b2a6;
-			color: #c7ebe8;
+		.wrapper.style0 {
+			background-color: white;
+			color: black;
 		}
 
-			.wrapper.style1 strong, .wrapper.style1 b {
-				color: #ffffff;
-			}
-
-			.wrapper.style1 h2, .wrapper.style1 h3, .wrapper.style1 h4, .wrapper.style1 h5, .wrapper.style1 h6 {
-				color: #ffffff;
-			}
+		.wrapper.style1 {
+			background-color: #F5F5F5;
+		}
 
 			.wrapper.style1 hr {
 				border-color: rgba(0, 0, 0, 0.125);
@@ -2665,20 +2659,8 @@
 				background: rgba(255, 255, 255, 0.075);
 			}
 
-			.wrapper.style1 header p {
-				color: #a6e0db;
-			}
-
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
 				border-color: rgba(0, 0, 0, 0.125);
-			}
-
-			.wrapper.style1 header.major p {
-				color: #c7ebe8;
-			}
-
-			.wrapper.style1 label {
-				color: #ffffff;
 			}
 
 			.wrapper.style1 input[type="text"],
@@ -2795,21 +2777,12 @@
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #F1EBDE;
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
-			color: #d3d4e4;
+			background-color: #E5EFF8;
 		}
-
-			.wrapper.style3 strong, .wrapper.style3 b {
-				color: #ffffff;
-			}
-
-			.wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
-				color: #ffffff;
-			}
 
 			.wrapper.style3 hr {
 				border-color: rgba(0, 0, 0, 0.125);
@@ -2823,16 +2796,8 @@
 				background: rgba(255, 255, 255, 0.075);
 			}
 
-			.wrapper.style3 header p {
-				color: #b9bad3;
-			}
-
 			.wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
 				border-color: rgba(0, 0, 0, 0.125);
-			}
-
-			.wrapper.style3 header.major p {
-				color: #d3d4e4;
 			}
 
 			.wrapper.style3 label {
@@ -2954,7 +2919,12 @@
 
 		.wrapper.style4 {
 			background-color: transparent;
+			color: white;
 		}
+
+			.wrapper.style4 h2 {
+				color: white;
+			}
 
 		.wrapper.style5 {
 			background-color: #ffffff;
@@ -3274,6 +3244,7 @@
 			line-height: inherit;
 			position: absolute;
 			top: 0;
+			color: #fff;
 		}
 
 			#header h1 a {
@@ -3394,6 +3365,7 @@
 		overflow: hidden;
 		position: relative;
 		text-align: center;
+		color: white;
 	}
 
 		#banner h2 {
@@ -3411,6 +3383,7 @@
 			padding: 0.35em 1em;
 			position: relative;
 			z-index: 1;
+			color: white;
 		}
 
 			#banner h2:before, #banner h2:after {
@@ -3703,7 +3676,12 @@
 		padding: 6em 0 4em 0 ;
 		background-color: #1d242a;
 		text-align: center;
+		color: white;
 	}
+
+		#footer h3 {
+			color: white;
+		}
 
 		#footer .team .person {
 			display: inline-block;
