Fix Ömer's name
Add accent.

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -118,7 +118,7 @@ html
             p Thorben
           .person
             img(src='/images/omer.png')
-            p Omer
+            p Ömer
           .person
             img(src='/images/rory.png')
             p Rory
