Change copy on splash page.

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -75,7 +75,7 @@ html
             h2
               | Our vision
             p
-              | Let‘s create a network where everyone can offer a skill they have.  
+              | Let‘s create a network where everyone can offer what they are good at.
               br
               |                 We see huge potential in all the people coming to new countries at the moment.  Bazaar wants to enable them and provide a tool to participate in their new society 
           img(width="75%" src='images/network.png')
