--- a/views/splash.jade
+++ b/views/splash.jade
@@ -59,6 +59,7 @@ html
               |                 
             p
               | We believe, locals and refugees should share their skills and learn from each other.
+          video(width="100%" src='https://s3.eu-central-1.amazonaws.com/bazaar-intrst/bazaar_welcome_video.mp4' poster='images/video_poster.jpg' controls)
       // One
       section#one.wrapper.style1.special
         .inner
