Change Maria to Anna

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -90,9 +90,9 @@ html
               br
               |                 Here is an example:
           ol
-            li Mustafa helps Maria fixing her bike, which takes one hour
-            li Therefore, Maria pays Mustafa one Time-Coin. 
-            li With this Time-Coin, Mustafa can receive one hour of German lessons from Luigi, who is a cook. 
+            li Mustafa helps Anna fixing her bike, which takes one hour
+            li Therefore, Anna pays Mustafa one Time-Coin.
+            li With this Time-Coin, Mustafa can receive one hour of German lessons from Luigi, who is a cook.
             li That way, they not only exchange skills but learn about their backgrounds and cultural values. 
           img(style="display:block; margin:0 auto;" width="75%" src='images/timebanking.png')
       // CTA
