--- a/views/splash.jade
+++ b/views/splash.jade
@@ -128,7 +128,7 @@ html
             a.icon.fa-twitter(href='#')
               span.label Twitter
           li
-            a.icon.fa-facebook(href='https://www.facebook.com/share.at.bazaar')
+            a.icon.fa-facebook(href='https://www.facebook.com/shareonbazaar')
               span.label Facebook
           li
             a.icon.fa-instagram(href='https://www.instagram.com/shareonbazaar/')
