--- a/views/splash.jade
+++ b/views/splash.jade
@@ -146,4 +146,4 @@ html
     script(src='js/util.js')
     //if lte IE 8
       script(src='js/ie/respond.min.js')
-    script(src='js/main.js')
+    script(src='js/splash.js')
