Fix JS file names
Reinstate the old main.js code we had.
Move splash code to splash.js

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -144,4 +144,4 @@ html
     script(src='js/util.js')
     //if lte IE 8
       script(src='js/ie/respond.min.js')
-    script(src='js/main.js')
+    script(src='js/splash.js')
