--- a/public/css/main.less
+++ b/public/css/main.less
@@ -322,3 +322,9 @@ input.activity-checkbox {
 .conversation-container .message-form textarea {
   width: 100%;
 }
+
+// Email users
+
+.email_form {
+  margin-top: 20px;
+}
