--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -330,3 +330,9 @@ input.activity-checkbox {
 .conversation-container .message-form textarea {
   width: 100%;
 }
+
+// Email users
+
+.email_form {
+  margin-top: 20px;
+}
