--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -18,6 +18,7 @@ html {
 body {
   padding-top: 60px;
   margin-bottom: 75px;
+  background-color: beige;
 }
 
 footer {
@@ -76,14 +77,18 @@ textarea {
 
 // Users
 
+.user-list {
+  margin-top: 20px;
+}
+
 .user-list .profile-pic {
-  width: 175px;
-  height: 175px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   border: 2px black solid;
   background-size: cover;
   background-position: center;
-  margin: 0 auto;
+  float: left;
 }
 
 .user-list .profile-pic.both {
@@ -98,18 +103,77 @@ textarea {
   border-color: black;
 }
 
-.user-list .profile-info {
-  width: 50%;
+.user-list .profile-info .header {
+  width: 70%;
   margin: 0 auto;
+  overflow: hidden;
+}
+
+.user-list .profile-info {
+  padding: 20px;
+  background-color: white;
+}
+
+.user-list .profile-info .header .contact-icons {
+  float: right;
+}
+
+.icons {
+  width: 35px;
+}
+
+.user-list .profile-info .header .icons {
+  display: block;
+}
+
+.user-list .profile-info .icon-links:nth-of-type(2) img {
+  margin-top: 20px;
+}
+
+.grid {
+  margin: 10px auto;
+}
+
+.grid-item {
+  width: 300px;
+  margin-bottom: 10px;
+}
+
+.user-list .profile-info .name-location {
+  clear: both;
+  background-color: #18bc9c;
+  margin: 20px 0px;
+  padding: 2px 0;
+  text-align: center;
+  white-space: nowrap;
+  margin-top: 10px;
+}
+
+.user-list .profile-info .name-location h3 {
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.user-list .profile-info .skill-icons {
+  overflow: hidden;
+  border-bottom: 2px solid #18bc9c;
+  padding-bottom: 10px;
+}
+
+.user-list .profile-info .skill-icons .icons {
+  float: left;
+  margin: 8px;
+}
+
+.user-list .profile-info p {
+  color: #18bc9c;
+  margin-top: 5px;
 }
 
 .user-list .profile-info .popover {
   width: 50%;
-}
-
-.user-list .profile-info .profile-name {
-  text-align: center;
-  white-space: nowrap;
 }
 
 .user-search-box {
