--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ html
     script(src='/js/lib/jquery-2.2.0.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/lib/jquery-ui.min.js')
+    script(src='/js/lib/imagesloaded.pkgd.min.js')
+    script(src='/js/lib/masonry.pkgd.min.js')
     script(src='/js/lib/ckeditor/ckeditor.js')
     script(src='/js/main.js')
     script(src="https://cdn.socket.io/socket.io-1.2.0.js")
