--- a/views/users/showall.jade
+++ b/views/users/showall.jade
@@ -4,14 +4,25 @@ block content
   .row
     input#user-search.user-search-box(placeholder="Search a skill here, e.g. cooking")
   input#csrf_token(type='hidden', name='_csrf', value=_csrf)
-  .row.user-list
+  .grid.user-list
     each user, i in users
       - var image_uri = user.profile.picture || '/images/person_placeholder.gif'
-      .col-md-4
+      .grid-item
 
         .profile-info
-          a(href="/profile/" + user.id)
-            h3.profile-name=user.profile.name
-          .profile-pic(class="#{user.match}" data-long=user.loc.coordinates[0] data-lat=user.loc.coordinates[1] style="background-image:url('#{image_uri}')", data-toggle="popover" data-trigger="hover" title="#{user.profile.name}" data-content="Skills: #{user.skill_labels.join(', ')}" )
+          .header
+            .profile-pic(class="#{user.match}" data-long=user.loc.coordinates[0] data-lat=user.loc.coordinates[1] style="background-image:url('#{image_uri}')", data-toggle="popover" data-trigger="hover" title="#{user.profile.name}" data-content="Skills: #{user.skill_labels.join(', ')}" )
+            .contact-icons
+              a.icon-links(href='/messages')
+                img.icons(src='/images/chat_bubble.svg')
+              a.icon-links(href='/transactions')
+                img.icons(src='/images/request_exchange.svg')
+          .name-location
+            h3=user.profile.name.split(' ')[0]
+            h4=user.profile.location
+          .skill-icons
+            each skill in user.skills
+              img.icons(src='/images/skill_icons/' + 'tools.svg')
+          p=user.aboutMe
 
   script(src='/js/showall.js')
