Make sure sign in link has an href

--- a/views/splash.jade
+++ b/views/splash.jade
@@ -47,7 +47,7 @@ html
             |               MARHABA, OLÁ!
           ul.actions
             li
-              a.button.special(href='#') SIGN IN
+              a.button.special(href='/login') SIGN IN
         a.more.scrolly(href='#zero') Learn More
       // Zero
       section#zero.wrapper.style0.special
