--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html
   body
     include partials/header
 
-    .container
+    .container-fluid
       include partials/flash
       block content
 
