--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -126,7 +126,11 @@ textarea {
   display: block;
 }
 
-.user-list .profile-info .icon-links:nth-of-type(2) img {
+.user-list .profile-info .icon-links {
+  cursor: pointer;
+}
+
+.user-list .profile-info .icon-links#second-icon img {
   margin-top: 20px;
 }
 
@@ -163,7 +167,6 @@ textarea {
 }
 
 .user-list .profile-info .skill-icons .icons {
-  float: left;
   margin: 8px;
 }
 
