Add skill icons to community page
Use the real icons. Also since we are now showing
icons for skills, we can remove the list of skills
from the popover on the user. Instead just use
this to show the distance.

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -118,7 +118,11 @@ footer {
   display: block;
 }
 
-.user-list .profile-info .icon-links:nth-of-type(2) img {
+.user-list .profile-info .icon-links {
+  cursor: pointer;
+}
+
+.user-list .profile-info .icon-links#second-icon img {
   margin-top: 20px;
 }
 
@@ -155,7 +159,6 @@ footer {
 }
 
 .user-list .profile-info .skill-icons .icons {
-  float: left;
   margin: 8px;
 }
 
