Add functionality for request button
When you click request button, can
select a skill and send request for that
skill to user.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -187,6 +187,16 @@ textarea {
   margin-top: 10px;
 }
 
+.profile-request-form {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.profile-request-form select {
+  width: 100%;
+  height: 100px;
+}
+
 // Account page
 
 input.activity-checkbox {
