--- a/public/css/main.less
+++ b/public/css/main.less
@@ -179,6 +179,16 @@ footer {
   margin-top: 10px;
 }
 
+.profile-request-form {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.profile-request-form select {
+  width: 100%;
+  height: 100px;
+}
+
 // Account page
 
 input.activity-checkbox {
